# xx-harness

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODOS.md  docker-compose.yml  pyproject.toml  run.py
.claude/skills/xx-harness/: SKILL.md
docs/superpowers/plans/: 2026-05-16-harness-framework-mvp.md
docs/superpowers/specs/: 2026-05-16-harness-framework-design-v2.md  2026-05-16-harness-framework-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ConfirmModal.tsx  DAGView.tsx  ErrorBanner.tsx  Layout.tsx  WorkflowDAG.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: AgentList.tsx  ProjectDetail.tsx  ProjectList.tsx  Settings.tsx  TaskCreate.tsx  TaskTrace.tsx  WorkflowDetail.tsx  WorkflowEditor.tsx
src/: config.py  harness_claude.py  models.py
src/db/: adapter.py  repositories.py  schema.py  sqlite.py
src/engine/: context.py  dag.py  orchestrator.py  runner.py  workspace.py
src/web/: app.py  deps.py  ws.py
src/web/routes/: _errors.py  agents.py  issues.py  projects.py  tasks.py  workflows.py
tests/: conftest.py  test_models.py
tests/test_db/: test_adapter.py  test_repositories.py  test_sqlite.py
tests/test_engine/: test_context.py  test_dag.py  test_orchestrator.py  test_runner.py  test_workspace.py
tests/test_web/: test_issues.py  test_projects.py  test_tasks.py  test_workflows.py
